[package]
name = "txl"
version = "0.1.0"
authors = ["Jezza <jeremy.barrow@vhbw.de>"]
edition = "2018"

[dependencies]
toml = "0.5.3"
structopt = "0.3.2"

[target."cfg(unix)".dependencies]
exec = "0.3.1"

[dependencies.tmux_interface]
#version = "0.0.5"
#path = "../tmux-interface-rs"
git = "https://github.com/Jezza/tmux-interface-rs"
branch = "dev"

[dependencies.serde]
version = "1.0.101"
features = ["derive"]
